# cushy-serial

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  greetings.yml  release-drafter.yml
cushy_serial/: __init__.py  _core.py
example/: polling_rec.py  rec_data.py
tests/: test_core.py
